# quantity_investment_stratege_system

./: =4.0  COLAB_GUIDE.md  README.md  config.py  main.py  pyproject.toml
.claude/: settings.local.json
backtest/: cost_model.py  engine.py  multi_asset.py  sector_analysis.py  signal_validation.py  signals.py  stability.py
data/: fetcher.py  store.py
data/cache/: NASDAQ.parquet  SP500.parquet  TNX.parquet  VIX.parquet
experiments/: label_search.py  multi_etf_search.py  phase2_search.py  sharpe_optimization.py  sharpe_v2.py  sharpe_v3.py  strategy_search.py
features/: label.py  technical.py
model/: evaluate.py  predict.py  predict_range.py  train.py
model/saved/: NASDAQ_lgbm.pkl  NASDAQ_lgbm_latest.pkl  NASDAQ_xgb.pkl  NASDAQ_xgb_latest.pkl  SP500_lgbm.pkl  SP500_lgbm_latest.pkl  SP500_xgb.pkl  SP500_xgb_latest.pkl
output/: report.py
scripts/: download_etfs_standalone.py  fetch_etfs.py
signal_layer/: calibration.py
strategy/: engine.py  regime.py  spec.py
