[project]
name = "finance-invest"
version = "2.0.0"
description = "Quantitative investment decision system with ML + strategy fusion"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "ta>=0.11",
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]

[project.scripts]
finance-invest = "main:main"
